--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,38 @@
-body {
-  background: linear-gradient(to bottom, #D2F5FF 0%, rgba(3,75, 82, 0) 100%);
- height: 100%;
- margin: 0;
- background-repeat: no-repeat;
- background-attachment: fixed;
+.App {
+  text-align: center;
 }
 
-.center {
-  height: 800px;
-  margin: auto;
-  width: 30%;
-  padding: 10px;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-input, button {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding: 10px;
-  width: 200px;
-  font-size: large;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
-h3 {
-  display: inline;
-  font-size: large;
-}
-
-span {
-  font-size: large;
-}
-
-.user-controls, .user-stats {
-  display: grid;
-  place-content: center;
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
 
-  max-width: 400px;
-  padding: 2.5em;
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
